[gd_scene load_steps=4 format=3 uid="uid://ddbxlvnl4v2kf"]

[ext_resource type="Script" uid="uid://bbroxdnv2ysay" path="res://root/scenes/game_scene/achievement_master/ui/resource_hud.gd" id="resource_hud_script"]
[ext_resource type="PackedScene" path="res://root/scenes/game_scene/achievement_master/ui/toast/toast_manager.tscn" id="toast_manager_scene"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3r3f"]
bg_color = Color(0.32280397, 0.6882976, 0.45200253, 1)

[node name="ResourceHud" type="CanvasLayer"]
layer = 10
script = ExtResource("resource_hud_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_right = 0.3
anchor_bottom = 0.022000002
offset_bottom = 64.159996
grow_horizontal = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HpHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HpHBoxContainer"]
layout_mode = 2
text = "HP"

[node name="HpBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HpHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 16)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_q3r3f")
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="WoodLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Wood: 0"

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 0"

[node name="MeatLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Meat: 0"

[node name="ToastManager" parent="." instance=ExtResource("toast_manager_scene")]
